# ltu-ili

./: .all-contributorsrc  .gitignore  .readthedocs.yaml  CHANGELOG.md  CITATION.bib  CONFIG.md  CONTRIBUTING.md  DATA.md  INSTALL.md  README.md  environment.yml  nicoNotes.txt  pyproject.toml  setup.cfg
.github/ISSUE_TEMPLATE/: blank-issue.md  bug_report.md  feature_request.md
.github/workflows/: build-pydelfi.yml  build-sbi.yml  publish.yml  pydelfi.yml  python-app.yml  run_notebooks.yml  unit-tests.yml
data/train_test_split/: generate_split.py  quijote_train_test_val.json
docs/: DOC_README.md  PYPI_README.md  api.rst  conf.py  index.rst  requirements.txt
docs/source/: CONTRIBUTING.md  INSTALL.md  README.md  api.rst  conf.py  contribute.rst  data.rst  example_script.rst  index.rst  install.rst  modules.rst
examples/: README.md  example_inference.py  example_inference_DELFI.py  example_inference_pydelfi.py  example_inference_sbi.py  example_inference_sbi_multiround.py  example_multiround.py  ili  ltu-ili-data  quijote_inference.py  quijote_inference_DELFI.py  quijote_inference_sbi.py  quijote_pydelfi.py  quijote_sbi.py  toy_lampe.py  toy_pydelfi.py  toy_sbi.py  toy_sbi_abc.py  toy_sbi_multiround.py
examples/.virtual_documents/LH_Quijote/: quijoteLH_appendDummy_sbi.ipynb
examples/LH_Quijote/: appendDummy_quijote_sbi.py  example_quijote_sbi_MDN.ipynb  quijoteLH_appendDummy_sbi.ipynb
examples/configs/: sample_inference_config.yaml  sample_quijoteTPCF_config.yaml  sample_quijoteTPCF_mdn_config.yaml  sample_quijotevalidation_config.yaml  sample_validation_config.yaml
examples/configs/data/: multiround.yaml  quijote_TPCF.yaml  toy.yaml  toy_multiround.yaml
examples/configs/inf/: quijote_MAF.yaml  quijote_MDN.yaml  sample_ensemble.yaml
examples/configs/infer/: multiround_ensemble.yaml  quijote_pydelfi_CMAF.yaml  quijote_sbi_MAF.yaml  quijote_sbi_MDN.yaml  sample_delfi.yaml  sample_pydelfi.yaml  sample_sbi.yaml  toy_lampe.yaml  toy_pydelfi.yaml  toy_sbi_NLE.yaml  toy_sbi_NPE.yaml  toy_sbi_NRE.yaml  toy_sbi_SNLE.yaml  toy_sbi_SNPE.yaml  toy_sbi_SNRE.yaml  toy_sbi_abc.yaml  toy_sbi_multiround.yaml
examples/configs/val/: multiround.yaml  quijote.yaml  quijote_pydelfi.yaml  quijote_sbi.yaml  sample.yaml  sample_pydelfi.yaml  sample_sbi.yaml  toy_lampe.yaml  toy_pydelfi.yaml  toy_sbi.yaml  toy_sbi_NLE.yaml  toy_sbi_NPE.yaml  toy_sbi_SNLE.yaml  toy_sbi_SNPE.yaml  toy_sbi_SNRE.yaml  toy_sbi_multiround.yaml
examples/notebooks/: compare_summaries.ipynb
ili/: __init__.py  cosmology.py  example_script.py
ili/dataloaders/: __init__.py  loaders.py
ili/embedding/: __init__.py  cnn.py  fcn.py  message_passing_gnn.py  summary_emulator.py  tpcf_emulator.py
ili/evidence/: __init__.py  runner.py  utils.py
ili/inference/: __init__.py  base.py  loaders.py  pydelfi_wrappers.py  runner.py  runner_lampe.py  runner_pydelfi.py  runner_sbi.py
ili/inference/density_estimators/: mdn.py
ili/utils/: __init__.py  cosmology.py  dataset.py  distributions.py  distributions_pt.py  distributions_tf.py  import_utils.py  ndes.py  ndes_pt.py  ndes_tf.py  samplers.py
ili/validation/: __init__.py  metrics.py  runner.py
ltu-ili/configs/: .test_pipeline.yml.swp  test_pipeline.yml
ltu-ili/dataops/: lightcone.py  summaries.py
notebooks/: README.md  cosmo_gnn_lampe.ipynb  evidence.ipynb  example_quijote_iliBackend.ipynb  example_quijote_sbi_MDN.ipynb  example_quijote_sbi_appendDummy.ipynb  lampe.ipynb  mycfg.py  optuna.ipynb  pydelfi.ipynb  quijoteLH_appendDummy_sbi.ipynb  sbi-heavy.ipynb  sbi.ipynb  sbi_test4PR.ipynb  stacked_likelihood.ipynb  tutorial.ipynb
paper/: .gitignore  README.md  fig2.ipynb  fig3.ipynb  logs  paper.mcstyle  style.mcstyle  wdir  workspace.ipynb
paper/2_toy/: abc.py  data_train.yaml  fig2.ipynb  fig2a.ipynb  gen.py  hmc.py  inf_abc.yaml  inf_nle.yaml  inf_npe.yaml  inf_pydelfi.yaml  run.py  val_nle.yaml  val_npe.yaml
paper/3_slcp/: fig2b.ipynb  metrics.py  run.py  run_metrics.py  run_slcp.sh  run_toy.sh
paper/3_xray/: data_train.yaml  inf_npe.yaml  val_npe.yaml  xray
paper/4_xray/: run.py
paper/fig10_sam/: sapphire_fishnets-Copy1.ipynb
paper/fig2_toy/: fig2a.ipynb
paper/fig3_toy/: abc.py  hmc.py
paper/fig4_slcp/: fig2b.ipynb  gen.py  run.py  run_slcp.sh
paper/fig4_xray/: inf_npe.yaml
paper/fig5_xray/: data_test.yaml  fig3.ipynb
paper/fig6_quijote/: quijote_TPCF_mnt_SNLE_9_data.yaml  quijote_sbi_MAF_SNLE_9_infer.yaml  quijote_sbi_MAF_SNLE_9_val.yaml
paper/fig7_graph/: cosmo_gnn_lampe.ipynb
paper/fig8_gw/: .gitignore  embeddings.py  ili_paper_gw_4params.ipynb
paper/fig9_dust/: dust.ipynb  sbi_example.py  sbi_example_dust.py  sbi_example_gamma.py
paper/jobs/: run_toy.sh
scripts/: run_tests.sh
scripts/train_test_split/: generate_split.py
tests/: my_run.sh  nico_local.sh  run.sh  test_lampe.py  test_pydelfi.py  test_sbi.py  test_sbi_module.py  test_sbi_nb_temp.ipynb  test_utils.py
(+44 files in other folders)
