[project]
name = "ltu-ili"
version = "0.1.6"
description = "implicit likelihood inference in astrophysics and cosmology"
requires-python = ">=3.9"
dependencies = [
    "numpy",
    "scipy",
    "matplotlib",
    "pandas",
    "pathlib",
    "pyaml",
    "seaborn",
    "emcee",
    "tqdm",
    "xarray",
    "tarp @ git+https://github.com/maho3/tarp.git",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.optional-dependencies]
pytorch = [
    "torch",
    "sbi",
    "lampe",
    "dask-ml",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["ili"]

[dependency-groups]
dev = [
    "coverage>=7.10.2",
    "jupyter>=1.1.1",
    "nbconvert>=7.16.6",
    "pytest>=8.4.1",
    "ruff>=0.12.8",
]
docs = [
    "babel>=2.17.0",
    "jinja2>=3.1.6",
    "myst-parser>=3.0.1",
    "pyzmq>=27.0.1",
    "sphinx>=7.4.7",
    "sphinx-mdinclude>=0.6.2",
    "sphinx-rtd-theme>=3.0.2",
    "urllib3>=1.26.20",
]
