[metadata]
name = ltu-ili
version = 0.0.0
description = python code for implicit likelihood inference in cosmology

[options]
zip_safe = False
include_package_data = True
packages = find:
python_requires = >=3.6
install_requires =
    numpy
    scipy
    matplotlib
    pandas
    pathlib
    pyaml
    seaborn
    emcee
    camb
    tqdm
    decorator
    pyzmq>=17.1
    jinja2>=2.4  
    urllib3<2.0
    babel
    xarray

[options.extras_require]
sbi = 
    sbi<=0.21
    tarp>=0.1.1
    deprecation==2.1.0
    sphinx>=5.0
    myst-parser
    sphinx-rtd-theme
    sphinx_mdinclude
    dask-ml
    torch<=1.12
pydelfi = 
    tensorflow==1.15
    dask-ml<2.0
    pydelfi @ git+https://github.com/justinalsing/pydelfi.git
