[metadata]
name = ltu-ili
version = 0.1.5
description = implicit likelihood inference in astrophysics and cosmology

[options]
zip_safe = False
include_package_data = True
packages = find:
python_requires = >=3.6
install_requires =
    numpy
    scipy
    matplotlib
    pandas
    pathlib
    pyaml
    seaborn
    emcee
    tqdm
    xarray
    tarp @ git+https://github.com/maho3/tarp.git

    # pytorch backend
    torch;python_version>='3.7'
    sbi<=0.22.0;python_version>='3.7'
    lampe;python_version>='3.7'
    dask-ml;python_version>='3.7'

    # tensorflow backend
    tensorflow==1.15;python_version<'3.7'
    dask-ml<2.0;python_version<'3.7'
    pydelfi @ git+https://github.com/maho3/pydelfi.git ;python_version<'3.7'

[options.extras_require]
dev = 
    pytest
    coverage
docs =
    sphinx>=5.0
    sphinx-rtd-theme
    sphinx_mdinclude
    myst-parser
    babel
    pyzmq>=17.1
    jinja2>=2.4  
    urllib3<2.0
